Refactor and modularize LifeSteal codebase
Reorganized classes into designated packages for better modularity and maintainability. Introduced configuration-driven recipes and task handling for heart crafting and discovery. Updated command structure and permissions to enhance clarity and usability.